# hso

./: .gitignore  LICENSE  README.md  configure.ac
example/: README.md
example/SpreadInfluence/: README.md
example/SpreadInfluence/Optmizer/: README.md
example/SpreadInfluence/Optmizer/spreadinfluence/: pom.xml  prova.txt
example/SpreadInfluence/Optmizer/spreadinfluence/src/main/java/it/isislab/graphalgorithm/spreadinfluence/: OCBAImplementation.java  Optimizer.java
example/SpreadInfluence/Optmizer/spreadinfluence/src/test/java/it/isislab/graphalgorithm/spreadinfluence/: AppTest.java
example/SpreadInfluence/Simulation_CPU/: README.md  cpu_script.sh  cpu_spread_eval.c
example/SpreadInfluence/Simulation_GPU/: README.md  cuda_spread_eval.cu  gpu_script.sh
example/Zombie/: README.md
example/Zombie/Optimizator/: deap_ga.py  params_for_deap.csv
example/Zombie/Optimizer/: README.md  deap_ga.py
example/Zombie/Simulation_Flame/: README.md  XMLReader.c  XMLWriter.c  gpu_script.sh
example/Zombie/Simulation_Flame/Flame_model/: XMLModelFile.xml  functions.c
example/Zombie/Simulation_Netlogo/: README.md  counts.csv  cpu_script.sh  pom.xml
example/Zombie/Simulation_Netlogo/resources/models/: JZombiesLogo.nlogo  nlogo-sofdiaseade.rtf
example/Zombie/Simulation_Netlogo/src/main/java/it/isislab/swiftlang/abm/netlogo/: NetLogoWrapper.java
example/Zombie/Simulation_Netlogo/src/test/java/it/isislab/swiftlang/abm/netlogo/: AppTest.java
example/Zombie/Simulation_Netlogo/swiftt-scripts/: netlogo_single_run.sh
src/: Makefile  Makefile.am  Makefile.in  hso  hso.c
src/libs/: zhelpers.h
